--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,29 +2,48 @@
 <html>
     <head>
         <title>Citizenbuild</title>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-        <link rel="stylesheet" href="/stylesheets/main.css">
+        <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"> -->
+        <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="/stylesheets/main.css"> -->
+
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+        
     </head>
     <Body>
-        <nav class="navbar navbar-default">
-            <div class= "container-fluid">
-                <div class= "navbar-header">
-                    <a class="navbar-brand" href="/">Citizenbuild</a>
-                </div>
-                <div class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav navbar-right">
-                        <% if(!currentUser){ %>
-                            <li> <a href="/login">Login</a></li>
-                            <li> <a href="/register">Sign Up</a></li>    
-                        <%} else {%>
-                            <li> <a href="#"> Signed In As <%= currentUser.username %> </a></li>
-                            <li> <a href="/logout">Log Out</a></li>
-                            
-                        <% } %>
-                        
-                    </ul>
-                </div>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            
+            <!-- Navbar brand -->
+            <a class="navbar-brand" href="/">Citizenbuild</a>
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">                                                       
+                <ul class="navbar-nav">
+                    <li  class="nav-item"><a class="nav-link" href="/store">Store</a></li>
+                    <li  class="nav-item"><a class="nav-link" href="/projects">Projects</a></li>
+                    <li  class="nav-item"><a class="nav-link" href="/items">Items</a></li>
+                    <li  class="nav-item"><a class="nav-link" href="/jobs">Jobs</a></li>
+                    <li  class="nav-item"><a class="nav-link" href="/locations">Locations</a></li>
+                    <li  class="nav-item"><a class="nav-link" href="/nonprofits">Non-Profits</a></li>
+                    <li  class="nav-item"><a class="nav-link" href="/people">People</a></li>
+                </u1>
+            </div>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarCollapse">
+                <ul class="navbar-nav"> 
+                    <% if(!currentUser){ %>
+                        <li class="nav-item"> <a class="nav-link" href="/login">Login</a></li>
+                        <li class="nav-item"> <a class="nav-link" href="/register">Sign Up</a></li>    
+                    <%} else {%>
+                        <li class="nav-item"> <a class="nav-link" href="#"> Signed In As <%= currentUser.username %> </a></li>
+                        <li class="nav-item"> <a class="nav-link" href="/logout">Logout</a>                     
+                    <% } %>
+                    
+                </ul>
             </div>
         </nav>
-    </Body>
-</html>
