--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,8 +1,16 @@
 .thumbnail img {
-    width: 100%;
+    /* width: 100%; */
 }
 
 .thumbnail {
     padding: 0;
+}
+
+body {
+    background-image: url(https://images.pexels.com/photos/911758/pexels-photo-911758.jpeg?cs=srgb&dl=architect-architecture-building-911758.jpg&fm=jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
 }
 
