--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -2,6 +2,15 @@
 
 <h1>Landing Page</h1>
 
-<a href="/projects">view all projects</a>
+<!-- <a href="/projects">view all projects</a> -->
+<div class="col-md-4 card-deck">
+    <div class="card" >
+        <div class="card-body">
+            <div class="card-title">
+                <h4>Visit Store</h4>    
+            </div>
+        </div>
+    </div>    
+</div>
 
 <%include partials/footer %>
