login to view projects

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,16 +1,117 @@
 <%include partials/header %>
 
-<h1>Landing Page</h1>
-
-<!-- <a href="/projects">view all projects</a> -->
-<div class="col-md-4 card-deck">
-    <div class="card" >
-        <div class="card-body">
-            <div class="card-title">
-                <h4>Visit Store</h4>    
+<div class="container">
+    <div class="">
+        <div class="container title">
+           <div class="row">
+                <div class="col-lg-12">
+                    <div>
+                        <h1>Citizenbuild</h1>
+                        <h5>Working together to build independence</h3>
+                        <hr id="hrgreen">
+                        <h4>
+                            <a id="actionbutton" href="#getstarted">Get Started</a>
+                        </h2>   
+                    </div>
+                </div>
             </div>
         </div>
-    </div>    
-</div>
+    </div>
 
+    
+    <div class="d-flex align-content-start flex-wrap">
+        <div name="getstarted" id="getstarted" class="col-md-8">
+            <div class="card">
+                <img class="card-image-top img-fluid img-thumbnail" src="https://pixabay.com/get/57e1d5424f4fad00f5d89960c62d3e7c143fd6e25353_1920.jpg" alt="pic" style="min-height: 150px">
+                <div class="card-body">
+                    <div class="card-title">
+                        <h4>Pitch, design, fund and build anything, together in the open.</h4>   
+                    </div>
+                    <hr id="hrgreen">
+                    <p> 
+                        Citizenbuild is a next generation crowdfunding and manufacturing platform for community-designed, community-built products - a platform where users can pitch, design, fund and build anything, together and completely in the open. 
+                    </p>    
+                    <p>    
+                        There is no longer any reason we can't create a world where self-reliant citizens and communities can design anything together, in the open, and build everything themselves, locally.  And Citizenbuild is a way to do just that,  with a new approach to work that is unabashedly and unequivocally open.
+                    </p>    
+                    <p>    
+                        Citizenbuild provides a place where you can post your ideas in the open, design them in collaboration with the community, and ensure they will be developed on a platform that guarantees you the right to fully participate in, and benefit from, what we build together. It's a place where you can tap into the entire world's talent to develop your idea rather than letting it sit dormant where the world can't see it.  For the most difficult engineering challenges facing our species, there needs to be a nimble platform where all interested citizens and experts from around the world can self-assemble around a problem in the open, and marshal the resources to carry out any endeavour.  We are the first to expressly provide such a platform, in the form of a business that anyone can join and that operates with total transparency.
+                    </p>    
+                    <p>    
+                        We started as a group of engineers and scientists, makers and entrepreneurs, workers, economists, and game theorists, determined to make a completely open source, shared economy practical.
+                    </p>    
+                    <p>    
+                        We wanted nothing less than a new way of organizing work that truly asks something of every citizen, that lets us join in and place ourselves in the roles where we are most motivated to work, to learn, and to use our minds.
+                    </p>    
+                    <p>    
+                        We wanted nothing less than a world where every citizen and every community has made modern civilization their own, mastered science and technology for themselves, and equipped themselves with the tools to take care of their own needs and directly shape their own lives, homes, food, energy and built environment without relying on governments.
+                    </p>    
+                    <p>   
+                        Anything less than this is not worthy of us as citizens. Anything less needlessly squanders the enormous productive and creative potential of the citizenry, letting it sit dormant. And at Citizenbuild we refuse to settle for anything less.
+                    </p>    
+                    <p>
+                        There is work that is stimulating and fun, we want as many people as possible sharing in it. If a decision is impactful, or a problem difficult, we want more minds working on it, not fewer. And not halfheartedly or disjointedly, but deliberately and concertedly, together.
+                    </p> 
+                        What would it take for people to freely invent and collaborate with one another in the open? That was the design challenge that prompted Citizenbuild.
+                    </p>
+                    <p> 
+                        But what prompted Citizenbuild, and what Citizenbuild is today (take a look) are less important than what you decide to do with it next.
+                    </p>
+                        
+                    
+                </div>
+            </div>    
+        </div>
+
+        <!-- <div class="col-md-6">
+            <div class="card" >
+                <img class="card-image-top img-fluid img-thumbnail" src="https://pixabay.com/get/57e1d5424f4fad00f5d89960c62d3e7c143fd6e25353_1920.jpg" alt="pic" style="min-height: 150px">
+             
+            </div>    
+        </div>
+
+        <div class="col-md-6">
+            <div class="card" >
+                <img class="card-image-top img-fluid img-thumbnail" src="https://pixabay.com/get/55e2dc474c5aad14f6d1867dda35367b1c3ddfe55a59754f_1920.jpg" alt="pic" style="min-height: 150px">
+             
+            </div>    
+        </div> -->
+        <div class="col-md-4">
+
+        </div>
+        <div class="col-md-12">
+            <hr id="hrgreen">
+        </div>
+        <div class="col-md-4">
+            
+        </div>
+        <div class="col-md-8">
+            <div class="card ">
+                <img class="card-image-top img-fluid img-thumbnail" src="https://pixabay.com/get/55e2dc474c5aad14f6d1867dda35367b1c3ddfe55a59754f_1920.jpg" alt="pic" style="min-height: 150px">
+                <div class="card-body">
+                    <div class="card-title">
+                        <h4>Unequivocally open</h4>   
+                    </div>
+                    <hr id="hrgreen">
+                    <P>
+                        Citizenbuild is a vehicle for citizens and communities to come together, directly decide for themselves what they want to produce, and carry it out on a local basis in which everyone, unequivocally, can join in. We carry this out as a tech company that lets the community define what we will produce (globally crowdsourcing all R&D) and produce it themselves locally, employing themselves through our shareholding entities (user-owned temp agencies taking the form of local co-ops in every community). These co-ops provide all labour and manufacturing infrastructure required to carry out a Citizenbuild project locally.
+                    </p>    
+                    <p>    
+                        Citizenbuild's terms of participation assure that users can place themselves into absolutely any project and absolutely any job of their choosing, whether we are talking about the production of basics like food and household items, or the largest engineering challenges the community might choose to set its sights on. 
+                    </p>    
+                    <p>    
+                        Whatever the user’s location, they will be able to collaborate on precisely the same terms and conditions, meant to guarantee each user the right to work and produce locally what users have designed together. This is what allows Citizenbuild (from the standpoint of game theory) to break the economic stalemate or "prisoner’s dilemma” that has needlessly held back collaboration, innovation and productivity.
+                    </p>    
+                    <p>    
+                        Since the co-ops own Citizenbuild, it is the first user-governed and user-owned tech company.
+                    </P>
+                </div>
+            </div>    
+        </div>
+        <div class="col-md-12">
+            <hr id="hrgreen">
+        </div>
+
+    </div>
+</div>
 <%include partials/footer %>
