--- a/views/projects/index.ejs
+++ b/views/projects/index.ejs
@@ -5,7 +5,7 @@
 <div class="container">
     <header class="jumbotron">
         <div class = "container">
-            <h1>projects!</h1>
+            <h1>Citizenbuild Projects</h1>
             <p>View our projects</p>
             <p>
                 <a class = "btn btn-primary btn-lg" href="/projects/new">Add New Project</a>
@@ -16,7 +16,7 @@
 
     <div class="row">
         <div class="col-lg-12">
-            <h3>Our best sites</h3>
+            <h3>Highlighted projects this week</h3>
         </div>
     </div>
 
