--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -6,11 +6,70 @@
     padding: 0;
 }
 
-body {
-    background-image: url(https://images.pexels.com/photos/911758/pexels-photo-911758.jpeg?cs=srgb&dl=architect-architecture-building-911758.jpg&fm=jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-attachment: fixed;
+
+html {
+	min-height: 100%;
 }
 
+body {
+	background-image: url("https://images.pexels.com/photos/911758/pexels-photo-911758.jpeg?cs=srgb&dl=architect-architecture-building-911758.jpg&fm=jpg");
+
+	background-size:cover;
+	background-repeat: no-repeat;
+	background-position: center;
+	background-attachment: fixed;
+	height: 100%;
+
+}
+
+
+
+#hrgreen {
+	border-width:1px;
+	border-color:green;
+}
+
+
+h1 {
+    color: black;
+    text-shadow: 2px 2px 4px #ffffff;
+}
+
+h5 {
+    color: black;
+    text-shadow: 2px 2px 4px #ffffff;
+}
+
+.title {
+	text-align: center;
+	padding: 220px 0px 560px 0px;
+    height: 100%;
+    /* opacity: 0.5; */
+}
+
+.blankPanel {
+	padding: 70px 0px 0px 0px;
+}
+
+.panels {
+	background-color: white;
+	border-color: green;
+	border-width: 2px;
+}
+
+.footerpanels {
+	text-align:center;
+	/* padding: 10px 10px 10px 10px; */
+	background-color: white;
+}
+
+#actionbutton {
+	color: white;
+    background-color: green;
+    padding: 10px 10px 10px 10px;
+}
+
+input.button {
+	color: white;
+	background-color: #79bbff;	
+}
