--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,13 +1,36 @@
 <% include ./partials/header %>
 
 
-<h1>Login!</h1>
 
-<form action="/login" method="post">
-    <input type="text" name="username" placeholder="username">
-    <input type="password" name="password" placeholder="password">
-    <input type="submit" value="Login">
-</form>
+<div class="container">
+
+    
+    </div>
+        <div class="col-md-12">
+        <hr id="hrgreen">
+    </div>
+    <div class="col-md-8">
+        <div class="card ">
+           
+            <div class="card-body">
+                <div class="card-title">
+                    <h4>Login!</h4>   
+                </div>
+                
+                <hr id="hrgreen">
+                <form action="/login" method="post">
+                    <input type="text" name="username" placeholder="username">
+                    <input type="password" name="password" placeholder="password">
+                    <input type="submit" value="Login">
+                </form>
+            </div>
+        </div>    
+    </div>
+
+</div>
+
+
+
 
 
 <% include ./partials/footer %>
