--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,12 @@
         <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script> -->
+    
+        <footer class="footer container-fluid footerpanels fixed-bottom">
+            <div class="container">
+                <div class="text-muted">
+                    <p> Copyright 2020 Citizenbuild, Inc. </p>	
+                </div>
+                
+            </div>
+        </footer>
     </Body>
 </html>
