--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -24,7 +24,20 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">                                                       
-                <ul class="navbar-nav">
+                <ul class="navbar-nav"> 
+                    <% if(!currentUser){ %>
+                        <li class="nav-item"></li>
+                         
+                    <%} else {%>
+                        
+                        <li  class="nav-item"><a class="nav-link" href="/projects">Projects</a></li>
+                                                 
+                    <% } %>
+                    
+                </ul>
+                
+                
+                <!-- <ul class="navbar-nav">
                     <li  class="nav-item"><a class="nav-link" href="/store">Store</a></li>
                     <li  class="nav-item"><a class="nav-link" href="/projects">Projects</a></li>
                     <li  class="nav-item"><a class="nav-link" href="/items">Items</a></li>
@@ -32,18 +45,23 @@
                     <li  class="nav-item"><a class="nav-link" href="/locations">Locations</a></li>
                     <li  class="nav-item"><a class="nav-link" href="/nonprofits">Non-Profits</a></li>
                     <li  class="nav-item"><a class="nav-link" href="/people">People</a></li>
-                </u1>
+                </u1> -->
             </div>
             <div class="collapse navbar-collapse justify-content-end" id="navbarCollapse">
                 <ul class="navbar-nav"> 
                     <% if(!currentUser){ %>
                         <li class="nav-item"> <a class="nav-link" href="/login">Login</a></li>
-                        <li class="nav-item"> <a class="nav-link" href="/register">Sign Up</a></li>    
+                         
                     <%} else {%>
                         <li class="nav-item"> <a class="nav-link" href="#"> Signed In As <%= currentUser.username %> </a></li>
-                        <li class="nav-item"> <a class="nav-link" href="/logout">Logout</a>                     
+                        <li class="nav-item"> <a class="nav-link" href="/logout">Logout</a>
+                                                 
                     <% } %>
                     
                 </ul>
             </div>
         </nav>
+
+        <div class="blankPanel">
+
+        </div>
