--- a/views/projects/new.ejs
+++ b/views/projects/new.ejs
@@ -1,33 +1,45 @@
 <% include ../partials/header %>
-
 <div class="container">
-    <div class = "row">
-        <h1 style="text-align: center">Create a new project</h1>
-        <div style="width:30%; margin: 25px auto;">
-            <form action="/projects" method = "POST">
-                <div class="form-group">
-                    <input class="form-control" type="text" name="name" placeholder="name">
-                </div>
-                <div class="form-group">
-                    <input class="form-control" type="text" name="image" placeholder="image url">
-                </div>           
-                <div class="form-group">
-                    <input class="form-control" type="text" name="description" placeholder="description">
-                </div>               
-                <div class="form-group">
-                    <button class="btn btn-lg btn-default btn-block btn-primary">Submit!</button>
-                </div>
-                               
-                
-            </form>            
-            <a href="/projects">Go back</a>        
-        </div>
 
-
-
-
+    
     </div>
+        <div class="col-md-12">
+        <hr id="hrgreen">
+    </div>
+    <div class="col-md-8">
+        <div class="card ">
+        
+            <div class="card-body">
+                <div class="card-title">
+                    <h4>Create a new project</h4>   
+                </div>
+                <div style="width:30%; margin: 25px auto;">
+                    <form action="/projects" method = "POST">
+                        <div class="form-group">
+                            <input class="form-control" type="text" name="name" placeholder="name">
+                        </div>
+                        <div class="form-group">
+                            <input class="form-control" type="text" name="image" placeholder="image url">
+                        </div>           
+                        <div class="form-group">
+                            <input class="form-control" type="text" name="description" placeholder="description">
+                        </div>               
+                        <div class="form-group">
+                            <button id="actionbutton" class="btn btn-lg btn-default btn-block btn-primary">Submit!</button>
+                        </div>
+                                       
+                        
+                    </form>            
+                    <a href="/projects">Go back</a>        
+                </div>
+            </div>
+        </div>    
+    </div>
+
 </div>
+
+
+
 
 
 <% include ../partials/footer %>
