--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,12 +1,32 @@
 <% include ./partials/header %>
 
+<div class="container">
+    </div>
+        <div class="col-md-12">
+        <hr id="hrgreen">
+    </div>
+    <div class="col-md-8">
+        <div class="card ">
+        
+            <div class="card-body">
+                <div class="card-title">
+                    <h4>Sign Up!</h4>   
+                </div>
+                
+                <hr id="hrgreen">
+                
+                <form action="/register" method="post">
+                    <input type="text" name="username" placeholder="username">
+                    <input type="password" name="password" placeholder="password">
+                    <button id="actionbutton">Sign Up!</button>
+                </form>
+            </div>
+        </div>    
+    </div>
 
-<h1> Sign Up!</h1>
+</div>
 
-<form action="/register" method="post">
-    <input type="text" name="username" placeholder="username">
-    <input type="password" name="password" placeholder="password">
-    <button>Sign Up!</button>
-</form>
+
+
 
 <% include ./partials/footer %>
