corrected database accessing

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -45,7 +45,7 @@
         </div>
         <div class="col-md-8">
             <div class="card ">
-                <!-- <img class="card-image-top img-fluid img-thumbnail" src="https://pixabay.com/get/55e2dc474c5aad14f6d1867dda35367b1c3ddfe55a59754f_1920.jpg" alt="pic" style="min-height: 150px"> -->
+                <!-- <img class="card-image-top img-fluid img-thumbnail" src="https://lh3.googleusercontent.com/2Fz6Fn5zq_hh75oNLsyNqyGSHzPopHojN77Eu6GImw_3bb4JteONR_K8lnCY2nRbZQV9RD7ACVYvTHEEoW6oGt2GNkAVXzsGdHl1XI9JWwr9ojo3N7t5mYgqaux8lESdvi4mJTti4Ok=w2400" alt="pic" style="min-height: 150px"> -->
                 <div class="card-body">
                     <div class="card-title">
                         <!-- <h4>Unequivocally open</h4>    -->
